--- a/index.html
+++ b/index.html
@@ -3,21 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cybersecurity Blog</title>
+  <title>Cybersecurity Website</title>
   <style>
-    /* CSS styles for the blog layout */
+    /* CSS styles for the website layout */
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f2f2f2;
+      background-color: #000;
+      overflow: hidden;
     }
 
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
+    #spider-web {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .web {
+      position: absolute;
+      width: 300px;
+      height: 300px;
+      background-image: url('spider-web.png');
+      background-size: cover;
+      animation: rotate 30s infinite linear;
+    }
+
+    @keyframes rotate {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
     }
 
     main {
@@ -29,90 +50,30 @@
     }
 
     h1 {
-      margin-top: 0;
-    }
-
-    form {
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    input[type="text"],
-    textarea {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ccc;
-    }
-
-    button {
-      background-color: #333;
       color: #fff;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
     }
 
-    button:hover {
-      background-color: #555;
-    }
-
-    .post {
-      margin-bottom: 20px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #ccc;
-    }
-
-    .post h2 {
-      margin-top: 0;
-    }
-
-    .post p {
-      margin-bottom: 0;
+    p {
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Cybersecurity Blog</h1>
-  </header>
+  <div id="spider-web">
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+    <div class="web"></div>
+  </div>
+
   <main>
-    <h2>Create a new post</h2>
-    <form id="postForm">
-      <label for="title">Title:</label>
-      <input type="text" id="title" name="title" required>
-      <label for="content">Content:</label>
-      <textarea id="content" name="content" rows="4" required></textarea>
-      <button type="submit">Submit</button>
-    </form>
-
-    <h2>Recent Posts</h2>
-    <div id="postsContainer"></div>
+    <h1>Welcome to the Cybersecurity Website</h1>
+    <p>This website is dedicated to providing you with the latest information and resources related to cybersecurity.</p>
+    <p>Stay updated and stay secure!</p>
   </main>
-
-  <script>
-    // JavaScript code to handle form submission and display posts
-    const postForm = document.getElementById('postForm');
-    const postsContainer = document.getElementById('postsContainer');
-
-    postForm.addEventListener('submit', (event) => {
-      event.preventDefault();
-      const title = document.getElementById('title').value;
-      const content = document.getElementById('content').value;
-
-      const post = document.createElement('div');
-      post.classList.add('post');
-      post.innerHTML = `
-        <h2>${title}</h2>
-        <p>${content}</p>
-      `;
-
-      postsContainer.prepend(post);
-      postForm.reset();
-    });
-  </script>
 </body>
 </html>
