--- a/index.html
+++ b/index.html
@@ -23,34 +23,64 @@ body {
 
 @keyframes matrix-effect {
   0% {
+    content: "";
+  }
+  5% {
     content: "C";
   }
   10% {
     content: "Cy";
   }
+  15% {
+    content: "C";
+  }
   20% {
+    content: "Cyb";
+  }
+  25% {
     content: "C";
   }
   30% {
-    content: "Cyb";
+    content: "Cybe";
+  }
+  35% {
+    content: "C";
   }
   40% {
+    content: "Cyber";
+  }
+  45% {
     content: "C";
   }
   50% {
-    content: "Cybe";
+    content: "Cyber ";
+  }
+  55% {
+    content: "C";
   }
   60% {
+    content: "Cyber S";
+  }
+  65% {
     content: "C";
   }
   70% {
-    content: "Cyber";
+    content: "Cyber Se";
+  }
+  75% {
+    content: "C";
   }
   80% {
+    content: "Cyber Sec";
+  }
+  85% {
     content: "C";
   }
   90% {
-    content: "Cyber ";
+    content: "Cyber Secu";
+  }
+  95% {
+    content: "C";
   }
   100% {
     content: "Cyber Security";
